--- a/linearRegresjon_kat.qmd
+++ b/linearRegresjon_kat.qmd
@@ -1,6 +1,11 @@
 # Lineær sannsynlighetsmodell
 
 ```{r}
+#| echo: false
+invisible(Sys.setlocale(locale='no_NB.utf8'))
+```
+
+```{r}
 #| warning: false
 #| error: false
 #| message: false
