--- a/oppgaver.qmd
+++ b/oppgaver.qmd
@@ -36,4 +36,12 @@ summary(gapminder)
 
 ```
 
+## Oppgave
 
+Last ned datafilen med navnet smoking.csv i R. Datasettet inneholder 1000 observasjoner basert på et utvalg fra en større populasjon. Det inneholder tre variabler: (1) alder på personen (*age*), (2) en binær (0 v. 1) indikator på om personen røyker (*smoker*) og (3) antall gjenstående forventet levealder til personen (*years*). Utforsk datasettet med *tidyverse*-kommandoer du har lær. 
+
+Lag et plot som visualiserer sammenhengen mellom røyking og forventet levealder for hver aldersgruppe (lag passende aldersgrupper selv). Hva finner du? Forklar.
+
+Bruk en regresjon som predikerer forventet levalder ved hjelp av røykestatus. Hva finner du? Forklar i lys av svaret på det forrige spørsmålet.
+
+Lag en en ny regresjonsmodell hvor du nå kontrollerer for alder. Hva finner du nå? Hva sier dette om det du fant tidligere?
